<?xml version="1.0" encoding="utf-8"?>

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/background_alimentos"
        tools:context=".CadastrarAlimentos">


        <TextView
            android:id="@+id/txtTitulo"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:background="@color/vermelho_claro"
            android:textColor="@color/branco"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_layer_gradient"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtInfoCadastroAlimento"
                android:paddingTop="80dp"
                android:paddingBottom="10dp"
                android:paddingLeft="25dp"
                android:paddingRight="35dp"
                android:text="@string/cadastrar_alimentos"
                android:textSize="20dp"
                android:textColor="@color/branco"
                android:layout_gravity="center_vertical"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_edittext_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtNomeAlimento"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:hint="@string/nome_alimentos"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textSize="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_edittext_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtMarcaAlimento"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:hint="@string/marca_alimento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_edittext_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtCaloriasAlimento"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:hint="@string/calorias_alimento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_edittext_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtTurnoAlimento"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:hint="@string/turno_alimento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/bg_edittext_normal"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtDescricaoAlimento"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:hint="@string/descricao_alimento"
                    android:textColorHint="@color/branco"
                    android:textColor="@color/branco"
                    android:textSize="20dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnCadastrarAlimento"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_button_normal"
                android:textSize="18dp"
                android:text="@string/btnCadastrarAlimento"
                android:textAllCaps="false"
                android:textColor="@color/branco"
                android:layout_gravity="center"/>
/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
