<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_login"
    tools:context=".CadastrarUsuario">


        <TextView
            android:id="@+id/txtTitulo"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:background="@color/vermelho_claro"
            android:textColor="@color/branco"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_layer_gradient"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/txtInfo"
                    android:paddingTop="80dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="35dp"
                    android:text="@string/slogan_cadastro"
                    android:textSize="20dp"
                    android:textColor="@color/branco"
                    android:layout_gravity="center_vertical"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center">

                        <EditText
                            android:id="@+id/edtNomeUsuario"
                            android:layout_width="350dp"
                            android:layout_height="60dp"
                            android:hint="@string/nome"
                            android:textColorHint="@color/branco"
                            android:textColor="@color/branco"
                            android:inputType="text"
                            android:textSize="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center">

                        <EditText
                            android:id="@+id/edtEmailUsuario"
                            android:layout_width="350dp"
                            android:layout_height="60dp"
                            android:hint="@string/emailcadastro"
                            android:textColorHint="@color/branco"
                            android:textColor="@color/branco"
                            android:inputType="textEmailAddress"
                            android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center">

                        <EditText
                            android:id="@+id/edtSenhaUsuario"
                            android:layout_width="350dp"
                            android:layout_height="60dp"
                            android:hint="@string/senhacadastro"
                            android:textColorHint="@color/branco"
                            android:textColor="@color/branco"
                            android:inputType="textPassword"
                            android:textSize="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center">

                        <EditText
                            android:id="@+id/edtRepetirSenhaUsuario"
                            android:layout_width="350dp"
                            android:layout_height="60dp"
                            android:hint="@string/repetirsenha"
                            android:textColorHint="@color/branco"
                            android:textColor="@color/branco"
                            android:inputType="textPassword"
                            android:textSize="20dp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnCadastrarUsuario"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_button_normal"
                    android:textSize="18dp"
                    android:text="@string/btn_cadastrar"
                    android:textAllCaps="false"
                    android:textColor="@color/branco"
                    android:layout_gravity="center"/>


        </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
