<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bege">

    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/bege"
        tools:context=".VisualizarFichaMedica">

        <TextView
            android:id="@+id/txtTitulo"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:background="@color/vermelho_claro"
            android:textColor="@color/branco"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="85dp" />

        <LinearLayout
            android:layout_margin="20dp"
            android:background="#56004040"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TextView
                android:id="@+id/txtInfo"
                android:paddingTop="15dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="35dp"
                android:text="@string/titulo_ficha_medica"
                android:textSize="25dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edtListaFichaMedica"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:text="@string/editar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

